force-app/src/objects/cpm__Recurring_Payment__c.object
<CustomObject>
    <description>A Recurring Payment represents a financial agreement between a contact or organisation and us.</description>
    <fields>
        <fullName>cpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debitor organisation.</description>
        <inlineHelpText>The debitor organisation.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicated whether the Recurring Payment is active. This field is not automatically updated. this needs to be implemented by the Implementing Partner.</description>
        <inlineHelpText>If checked this Recurring Payment is included in payment runs.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Amount__c</fullName>
        <description>The amount the Recurring Payment is for. This is the amount that every billing cycle is billed to the debitor.</description>
        <inlineHelpText>The amount per billing cycle (frequency)</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Bank_Statement_Description__c</fullName>
        <description>The description provided to the bank or payment provider for use on the bank statement of the debitor. When using a payment provider be sure to always have this field contain the name of the organisation. As this is not otherwise displayed on the bank statement.</description>
        <inlineHelpText>The description provided to the debitor. When using a payment provider be sure to always have this field contain the name of the organisation. As this is not otherwise displayed on the bankstatement.</inlineHelpText>
        <label>Default Bank Statement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Collection_Day_of_Month__c</fullName>
        <description>Indicates the day of the month the Next Collection Date will be calculated, with direct debit this also means the direct debit is performed on this day.</description>
        <inlineHelpText>When selected day of month isn&apos;t available in a month, the last day in the month will be used</inlineHelpText>
        <label>Collection Day of Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debitor. (person)</description>
        <inlineHelpText>The debitor.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Account_Holder_Name__c</fullName>
        <label>Custom Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_BIC__c</fullName>
        <label>Custom Account Number Additional</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_IBAN__c</fullName>
        <label>Custom Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Mandate_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if mandate is active, false if not.</description>
        <label>Custom Mandate Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Mandate_Date_Signed__c</fullName>
        <label>Custom Mandate Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Mandate_ID__c</fullName>
        <label>Custom Mandate ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Custom_Payment_Reference__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Populate this field if you want to use another Payment Reference than the one is generated in Salesforce</inlineHelpText>
        <label>Custom Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Description_of_Gift__c</fullName>
        <description>Used for Gifts in Kind only.</description>
        <inlineHelpText>For gifts in kind</inlineHelpText>
        <label>Description of Gift</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cpm__End_Date_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in a trigger and is set when Next Collection Date is greater than End Date. If true this checkbox is checked and field update will be prevented</description>
        <label>End Date Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__End_Date__c</fullName>
        <description>The date on which the Recurring Payment ends. After this date the Active checkbox should be set to inactive.</description>
        <inlineHelpText>The date on which the Recurring Payment ends.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Expected_Remaining_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>A calculated forecast of the expect revenue remaining this year from this Recurring Payment.</description>
        <inlineHelpText>The amount of money we expect to get from this Recurring Payment for the remainder of this year.</inlineHelpText>
        <label>Expected Remaining Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Final_Payment_Reference__c</fullName>
        <description>The payment reference for this Recurring Payment.</description>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Payment_Reference__c ) ) , cpm__Custom_Payment_Reference__c , cpm__Generated_Payment_Reference__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The payment reference for this Recurring Payment.</inlineHelpText>
        <label>Final Payment Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Frequency__c</fullName>
        <description>The billing cycle for this Recurring Payment. every billing cycle a installment is created to facilitate collection.</description>
        <inlineHelpText>How often this Recurring Payment should be collected.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Twice a year</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__GUID__c</fullName>
        <label>GUID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cpm__Generated_Payment_Reference__c</fullName>
        <description>The auto generated payment reference.</description>
        <externalId>true</externalId>
        <inlineHelpText>The auto generated payment reference.</inlineHelpText>
        <label>Generated Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate_Date_Signed__c</fullName>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Mandate_Date_Signed__c ) ) , cpm__Custom_Mandate_Date_Signed__c , cpm__Mandate__r.cpm__Date_Signed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mandate Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate_ID__c</fullName>
        <formula>IF ( NOT ( ISBLANK ( cpm__Custom_Mandate_ID__c ) ) , cpm__Custom_Mandate_ID__c , cpm__Mandate__r.cpm__Mandate_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mandate ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandate</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>cpm__Mandate__c.cpm__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>cpm__Mandate__c.cpm__Payment_Profile__c</field>
                <operation>equals</operation>
                <valueField>$Source.cpm__Payment_Profile__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.cpm__Payment_Profile__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cpm__Mandate__c</referenceTo>
        <relationshipLabel>Recurring Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Mandatory_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Donations are by definition voluntary payments, but payments for memberships or products may be mandatory. Use this checkbox to indicate so.</description>
        <inlineHelpText>Is payment mandatory or voluntary?</inlineHelpText>
        <label>Mandatory payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Name__c</fullName>
        <description>The name of the debitor. whether it be a Organisation or a Contact.</description>
        <formula>IF (ISBLANK(cpm__Account__c) , cpm__Contact__r.FirstName + &apos; &apos; + cpm__Contact__r.LastName , cpm__Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the debitor.</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Next_Collection_Date__c</fullName>
        <description>The date this Recurring Payment is supposed to be collected.</description>
        <inlineHelpText>The date this Recurring Payment is supposed to be collected.</inlineHelpText>
        <label>Next Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Originating_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The campaign that is primarily repsonsible for obtaining this Recurring Payment from the debitor.</description>
        <inlineHelpText>The campaign that led to this Recurring Payment.</inlineHelpText>
        <label>Originating Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__PayLinks_Page__c</fullName>
        <label>PayLinks Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-Stripe</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-Adyen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Profile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contains information like a Credit Card reference, or an IBAN.</description>
        <inlineHelpText>Select the payment profile containing the information required to complete the payments. Such as an IBAN.</inlineHelpText>
        <label>Payment Profile</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
            <filterItems>
                <field>cpm__Payment_Profile__c.cpm__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.cpm__Contact__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>cpm__Payment_Profile__c.cpm__Contact__c</field>
                <operation>equals</operation>
                <valueField>$Source.cpm__Contact__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.cpm__Account__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>cpm__Payment_Profile__c.cpm__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.cpm__Account__c</valueField>
            </filterItems>
            <infoMessage>By default only active records are shown.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipLabel>Recurring Payments</relationshipLabel>
        <relationshipName>Recurring_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_QR__c</fullName>
        <label>Payment QR</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Url__c</fullName>
        <label>Payment Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cpm__Recount_collected_installments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this checkbox manually triggers a recount of the number of collected installments field.</description>
        <inlineHelpText>Checking this checkbox manually triggers a recount of the number of collected installments field.</inlineHelpText>
        <label>Recount collected installments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Recurring_Payment_Forecast__c</fullName>
        <formula>/*
IF( OR( BLANKVALUE( End_Date__c ), NOT( OR(Next_Collection_Date__c &gt; End_Date__c, Next_Collection_Date__c &gt; DATEVALUE( &apos;12-31-&apos;&amp;TEXT(YEAR(TODAY())) ) ) ) ,
IF( OR( BLANKVALUE( End_Date__c ), Next_Collection_Date__c &gt; DATEVALUE( &apos;12-31-&apos;&amp;TEXT( YEAR( TODAY() ) ) ) ),

)

)
*/
TEXT( DATEVALUE( TEXT( YEAR( today() ) )&amp;&quot;-12-31&quot; ) - cpm__Next_Collection_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of collectable days remaining in the current year.</inlineHelpText>
        <label>Recurring Payment Forecast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Setup_URL__c</fullName>
        <description>A URL to a payment page where the payer can update how the recurring payment will be paid. The update can change, for example, payment method and processor, mandate, payment profile and payment reference.</description>
        <inlineHelpText>A URL to a payment page where the payer can update how the recurring donation will be paid.</inlineHelpText>
        <label>Setup URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cpm__Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The start date for this Recurring Payment.</description>
        <inlineHelpText>The start date for this Recurring Payment.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Status_Reason__c</fullName>
        <description>Can contain details on why the current status has a particular value. for example: inactive, reason: debitor passed away.</description>
        <inlineHelpText>Details on why the Recurring Payment has the current status.</inlineHelpText>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <description>The current status of this Recurring Payment.</description>
        <inlineHelpText>The current status of this Recurring Payment.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Not validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Processor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Council of International Schools</fullName>
                </value>
                <value>
                    <fullName>Main</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Yearly_value__c</fullName>
        <description>Calculates the revenue per year based on the Amount * the Frequency.</description>
        <formula>cpm__Amount__c * CASE(TEXT( cpm__Frequency__c ), &quot;One-time&quot;, 1, &quot;Monthly&quot;, 12, &quot;Quarterly&quot;, 4, &quot;Twice a year&quot;, 2, &quot;Weekly&quot;, 52, &quot;Daily&quot;, 365, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How much the Recurring Payment creates in revenue each year.</inlineHelpText>
        <label>Yearly value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__ls_coll_date__c</fullName>
        <description>The last time this Recurring Payment was processed in a payment run and had a installment created.</description>
        <inlineHelpText>The last date this Recurring Payment was included in a payment run.</inlineHelpText>
        <label>Last Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__n_of_collected_installments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of collected installments</description>
        <label># of collected installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Recurring Payment</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <columns>NAME</columns>
        <columns>cpm__Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>cpm__Amount__c</columns>
        <columns>cpm__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>cpm__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0}</displayFormat>
        <label>Recurring Payment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__Account_or_Contact_should_be_selected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(cpm__Account__c), ISBLANK(cpm__Contact__c))</errorConditionFormula>
        <errorMessage>An Account or Contact needs to be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Default_Bank_Statement_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( ISBLANK ( cpm__Bank_Statement_Description__c ) , true , false )</errorConditionFormula>
        <errorDisplayField>cpm__Bank_Statement_Description__c</errorDisplayField>
        <errorMessage>Default Bank Statement Description is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Frequency_is_required</fullName>
        <active>true</active>
        <description>Frequency is a required field on all commitments.</description>
        <errorConditionFormula>ISPICKVAL(cpm__Frequency__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>cpm__Frequency__c</errorDisplayField>
        <errorMessage>Frequency is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__IBAN_with_direct_debit</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( cpm__Payment_Method__c , &quot;Direct Debit&quot;), 
OR(  cpm__Payment_Profile__r.RecordType.DeveloperName == &quot;IBAN&quot;, cpm__Payment_Profile__r.RecordType.DeveloperName == &quot;Legacy_Bank_Account&quot; ) )</errorConditionFormula>
        <errorDisplayField>cpm__Payment_Profile__c</errorDisplayField>
        <errorMessage>A IBAN or bank account is required with payment method &quot;Direct Debit&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Payment_Method_Required</fullName>
        <active>true</active>
        <description>A payment method is required for every Recurring Payment.</description>
        <errorConditionFormula>ISPICKVAL(  cpm__Payment_Method__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>cpm__Payment_Method__c</errorDisplayField>
        <errorMessage>Payment Method is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Payment_Processor_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>IF ( ISBLANK ( TEXT(cpm__Payment_Processor__c) ) , true , false )</errorConditionFormula>
        <errorDisplayField>cpm__Payment_Processor__c</errorDisplayField>
        <errorMessage>Payment Processor is a required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Status_required</fullName>
        <active>true</active>
        <description>The status is required for every Recurring Payment.</description>
        <errorConditionFormula>ISPICKVAL( cpm__Status__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>cpm__Status__c</errorDisplayField>
        <errorMessage>Status is a required field</errorMessage>
    </validationRules>
</CustomObject>